[ASM-2363] feat: address flagged code smells